--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -15,7 +15,11 @@
     <![endif]-->
 
     <!-- Le styles -->
+    {% unless site.JB.bootswatch == null %}
+    <link href="{{ ASSET_PATH }}/bootstrap/css/{{ site.JB.bootswatch }}-bootstrap.min.css" rel="stylesheet">
+    {% else %}
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    {% endunless %}
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
