--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -70,6 +70,8 @@
           using <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/"
           target="_blank">Twitter Bootstrap</a>
+          and
+          <a href="http://bootswatch.com/" target="_blank">Bootswatch</a>
           </small>
         </p>
       </footer>
